--- a/src/app/pages/sports/sports-filter/sports-filter.html
+++ b/src/app/pages/sports/sports-filter/sports-filter.html
@@ -21,7 +21,7 @@
 <!--EN-TETE-->
 <ion-header>
   <ion-toolbar>
-    <ion-buttons start>
+    <ion-buttons slot="start">
       <ion-button (click)="dismiss()">{{'SPORTS.CANCEL' | translate}}</ion-button>
     </ion-buttons>
     <ion-row><ion-col>
@@ -29,7 +29,7 @@
       {{'SPORTS.FILTER' | translate}}
     </ion-title>
 </ion-col></ion-row>
-    <ion-buttons end>
+    <ion-buttons slot="end">
       <ion-button (click)="applyFilters()" strong>{{'SPORTS.APPLY' | translate}}</ion-button>
     </ion-buttons>
   </ion-toolbar>
@@ -39,16 +39,16 @@
 <ion-content class="outer-content">
 
   <ion-toolbar color="uclouvain">
-  <ion-buttons left>
-    <ion-button icon-right end (click)="uncheckAll()">
-      {{'SPORTS.UNTOGGLE' | translate}}
-      <ion-icon name="done-all"></ion-icon>
+  <ion-buttons slot="start">
+    <ion-button (click)="uncheckAll()" color="light">
+      <ion-label>{{'SPORTS.UNTOGGLE' | translate}}</ion-label>
+      <ion-icon slot="end" name="done-all"></ion-icon>
     </ion-button>
   </ion-buttons>
-  <ion-buttons end>
-    <ion-button icon-right (click)="resetFilters()">
-      {{'SPORTS.RESTORE' | translate}}
-      <ion-icon name="refresh-circle"></ion-icon>
+  <ion-buttons slot="end">
+    <ion-button (click)="resetFilters()" color="light">
+      <ion-label>{{'SPORTS.RESTORE' | translate}}</ion-label>
+      <ion-icon slot="end" name="refresh-circle"></ion-icon>
     </ion-button>
   </ion-buttons>
 </ion-toolbar>
