--- a/src/app/pages/guindaille2-0/guindaille2-0.html
+++ b/src/app/pages/guindaille2-0/guindaille2-0.html
@@ -22,21 +22,23 @@
 <!--EN-TETE-->
 <ion-header>
   <ion-toolbar color="guindaille">
-      <img src="./assets/img/s.png" height="28"/>
-<!--<ion-title align="center">{{title | translate}}</ion-title>-->
-<ion-title align="center">
+      <ion-buttons slot="start">
+          <ion-back-button></ion-back-button>
+          <img src="./assets/img/s.png" height="28"/>
+        </ion-buttons>
+<ion-title horizontal="center">
       <img alt="logo"   height="40" src="./assets/img/guindaille/logo.png" >
     </ion-title>
   </ion-toolbar>
-  <ion-segment [(ngModel)]="segment" class="gelem gtext">
-    <ion-segment-button value="pict" style="color:white">
-      {{'GUINDAILLE.PICTO' | translate}}
+  <ion-segment [(ngModel)]="segment" color="guindaille">
+    <ion-segment-button value="pict">
+      <ion-label color="light">{{'GUINDAILLE.PICTO' | translate}}</ion-label>
     </ion-segment-button>
-    <ion-segment-button value="effect" style="color:white">
-      {{'GUINDAILLE.EFFECT' | translate}}
+    <ion-segment-button value="effect">
+        <ion-label color="light">{{'GUINDAILLE.EFFECT' | translate}}</ion-label>
     </ion-segment-button>
-    <ion-segment-button value="help" style="color:white">
-      {{'GUINDAILLE.HELP' | translate}}
+    <ion-segment-button value="help">
+        <ion-label color="light">{{'GUINDAILLE.HELP' | translate}}</ion-label>
     </ion-segment-button>
   </ion-segment>
 </ion-header>
@@ -44,9 +46,6 @@
 <!--BODY-->
 <ion-content [ngClass]="{'guindailleHelp' : segment === 'help', 'guindaille' : segment !== 'help'}" >
   <ng-container *ngIf="segment==='pict'" class="gelem">
-    <ion-item-divider  class="gelem">
-      <ion-button round class="gbutton" ><p class="gtext">{{'GUINDAILLE.PICTO' | translate}}</p></ion-button>
-    </ion-item-divider>
 
     <ion-grid class="gelem" no-lines>
           <ion-row>
@@ -88,7 +87,7 @@
 
 
           <ion-row>
-            <ion-col col-4 offset-4 >
+            <ion-col size="4" offset="4" >
               <img alt="violence" src="./assets/img/guindaille/Violence-arrete-toi-avant.png" align="middle" align="center" (click)="showAlert(violence)"/>
             </ion-col>
           </ion-row>
@@ -96,9 +95,6 @@
   </ng-container>
 
   <ng-container *ngIf="segment==='effect'" class="gelem">
-    <ion-item-divider   class="gelem" no-lines>
-      <ion-button round class="gbutton" ><p class="gtext">{{'GUINDAILLE.EFFECT' | translate}}</p></ion-button>
-    </ion-item-divider>
 
     <ion-item class="gelem" no-lines>
       <ion-slides pager>
@@ -111,9 +107,6 @@
   </ng-container>
 
   <ng-container *ngIf="segment==='help'" class="gelem">
-    <ion-item-divider  class="gelem" no-lines>
-      <ion-button round class="gbutton" ><p class="gtext">{{'GUINDAILLE.HELP' | translate}}</p></ion-button>
-    </ion-item-divider>
 
     <ion-item  class="gelem">
       <div style="border: 2px solid #1c75c8; padding: 3px; background-color: #c5ddf6; -moz-border-radius-topleft: 5px; -moz-border-radius-topright: 5px; -moz-border-radius-bottomright: 5px; -moz-border-radius-bottomleft: 5px;" text-wrap>
