--- a/src/app/pages/mobility/mobility.html
+++ b/src/app/pages/mobility/mobility.html
@@ -21,11 +21,11 @@
 <!--EN-TETE-->
 <ion-header>
   <ion-toolbar color="mobilite">
-    <ion-button icon-only menuToggle>
-      <ion-icon name="menu"></ion-icon>
-    </ion-button>
-    <img src="./assets/img/s.png" height="28"/>
-    <ion-title align="center">{{title | translate}}</ion-title>
+    <ion-buttons slot="start">
+      <ion-back-button></ion-back-button>
+      <img src="./assets/img/s.png" height="28"/>
+    </ion-buttons>
+    <ion-title horizontal="center">{{title | translate}}</ion-title>
   </ion-toolbar>
 </ion-header>
 
