--- a/src/app/pages/credit/credit.html
+++ b/src/app/pages/credit/credit.html
@@ -22,10 +22,10 @@
 <!--EN-TETE-->
 <ion-header>
   <ion-toolbar color="cred">
-    <ion-button icon-only menuToggle>
-      <ion-icon name="menu"></ion-icon>
-    </ion-button>
-    <img src="./assets/img/s.png" height="28"/>
+    <ion-buttons slot="start">
+      <ion-back-button></ion-back-button>
+      <img src="./assets/img/s.png" height="28"/>
+    </ion-buttons>
     <ion-title>{{title | translate}}</ion-title>
   </ion-toolbar>
 </ion-header>
