--- a/src/app/pages/events/events.html
+++ b/src/app/pages/events/events.html
@@ -81,17 +81,17 @@
         </ion-item>
 
         <ion-item-options>
-          <ion-button outline (click)="createEvent(slidingItem, event)" class="large-icon">
-            <ion-icon name='calendar'></ion-icon>
-          </ion-button>
+          <ion-item-option fill="outline" (click)="createEvent(slidingItem, event)">
+            <ion-icon size="large" name='calendar'></ion-icon>
+          </ion-item-option>
 
-          <ion-button outline (click)="addFavorite(slidingItem, event)" *ngIf="segment === 'all'" class="large-icon">
-            <ion-icon name="star-outline"></ion-icon>
-          </ion-button>
+          <ion-item-option fill="outline" (click)="addFavorite(slidingItem, event)" *ngIf="segment === 'all'">
+            <ion-icon size="large" name="star-outline"></ion-icon>
+          </ion-item-option>
 
-          <ion-button (click)="removeFavorite(slidingItem, event, 'Remove Favorite')" *ngIf="segment === 'favorites'" class="large-icon">
-            <ion-icon name='close'></ion-icon>
-          </ion-button>
+          <ion-item-option (click)="removeFavorite(slidingItem, event, 'Remove Favorite')" *ngIf="segment === 'favorites'">
+            <ion-icon size="large" name='close'></ion-icon>
+          </ion-item-option>
         </ion-item-options>
       </ion-item-sliding>
   </ion-list>
