--- a/src/app/pages/news/news.html
+++ b/src/app/pages/news/news.html
@@ -48,7 +48,7 @@
         <ion-label>{{'NEWS.SERVICE' | translate}}</ion-label>
     </ion-segment-button>
   </ion-segment>
-  <ion-segment [(ngModel)]="facsegment" (ionChange)="facTabChange()" *ngIf="segment==='fac'">
+  <ion-segment [(ngModel)]="facsegment" *ngIf="segment==='fac'">
     <ion-segment-button value="news">
         <ion-label>{{'HOME.NEWS' |translate}} <strong *ngIf="userS.hasFac()">({{userS.fac}})</strong></ion-label>
     </ion-segment-button>
