--- a/src/app/pages/sports/sports.html
+++ b/src/app/pages/sports/sports.html
@@ -97,6 +97,7 @@
   </ion-list-header>
 </ion-content>
 
-<ion-footer text-center *ngIf="segment=='all' || segment=='team'">
-  <ion-icon name='help-circle'></ion-icon><p style="color:white">{{'SPORTS.SWIPE' | translate}}</p>
+<ion-footer text-center color="sport" *ngIf="segment=='all' || segment=='team'">
+  <ion-icon name='help-circle'></ion-icon>
+  <p style="color:white">{{'SPORTS.SWIPE' | translate}}</p>
 </ion-footer>
