--- a/src/app/pages/events/events.html
+++ b/src/app/pages/events/events.html
@@ -28,7 +28,7 @@
         </ion-buttons>
     
     <ion-title horizontal="center">{{title | translate}}</ion-title>
-    <ion-buttons slot="end">
+    <ion-buttons *ngIf="segment==='all'" slot="end">
       <ion-button (click)="presentFilter()">
         <ion-icon  name="options"></ion-icon>
       </ion-button>
