Refactor (to inspect)

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -64,11 +64,11 @@
             <p align="center"><b><font color="#002D62">{{'HOME.NEWS' | translate}}</font></b></p>
           </ion-col>
           <ion-col col-4  text-center >
-            <img alt="louvinfo" src="./assets/img/event.png" align="middle"   (click)="changePage(eventPage)"/>
+            <img alt="louvinfo" src="./assets/img/events.png" align="middle"   (click)="changePage(eventPage)"/>
             <p align="center"><b><font color="#002D62">{{'HOME.EVENTS' | translate}}</font></b></p>
           </ion-col>
           <ion-col col-4  text-center>
-            <img alt="sport" src="./assets/img/sport.png" align="middle"  (click)="changePage(sportPage)"/>
+            <img alt="sport" src="./assets/img/sports.png" align="middle"  (click)="changePage(sportPage)"/>
             <p align="center"><b><font color="#002D62">{{'HOME.SPORTS' | translate}}</font></b></p>
           </ion-col>
         </ion-row>
@@ -122,11 +122,11 @@
         </ion-row>
         <ion-row class="homeML">
           <ion-col col-3  text-center >
-            <img alt="louvinfo" src="./assets/img/event.png" align="middle"   (click)="changePage(eventPage)"/>
+            <img alt="louvinfo" src="./assets/img/events.png" align="middle"   (click)="changePage(eventPage)"/>
             <p align="center"><b><font color="#002D62">{{'HOME.EVENTS' | translate}}</font></b></p>
           </ion-col>
           <ion-col col-3  text-center>
-            <img alt="sport" src="./assets/img/sport.png" align="middle"  (click)="changePage(sportPage)"/>
+            <img alt="sport" src="./assets/img/sports.png" align="middle"  (click)="changePage(sportPage)"/>
             <p align="center"><b><font color="#002D62">{{'HOME.SPORTS' | translate}}</font></b></p>
           </ion-col>
           <ion-col col-3  text-center>
