--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -89,11 +89,11 @@
         <ion-row class="homeM">
           <ion-col col-4  text-center>
              <img alt="param" src="./assets/img/setting.png" align="middle"  (click)="changePage(paramPage)"/>
-             <p align="center"><b><font color="#002D62">{{'MENU.PARAM' | translate}}</font></b></p>
+             <p align="center"><b><font color="#002D62">{{'MENU.SETTINGS' | translate}}</font></b></p>
           </ion-col>
           <ion-col col-4  text-center>
              <img alt="guindaille" src="./assets/img/g2.png" align="middle" (click)="changePage(guindaillePage)"/>
-             <p align="center"><b><font color="#002D62">{{'MENU.PARTY' | translate}}</font></b></p>
+             <p align="center"><b><font color="#002D62">{{'MENU.GUINDAILLE' | translate}}</font></b></p>
           </ion-col>
           <ion-col col-4  text-center >
              <img alt="urgence" src="./assets/img/urgence.png" align="middle"  (click)="emergency()"/>
@@ -145,11 +145,11 @@
           </ion-col>
           <ion-col col-3  text-center>
              <img alt="param" src="./assets/img/setting.png" align="middle"  (click)="changePage(paramPage)"/>
-             <p align="center"><b><font color="#002D62">{{'MENU.PARAM' | translate}}</font></b></p>
+             <p align="center"><b><font color="#002D62">{{'MENU.SETTINGS' | translate}}</font></b></p>
           </ion-col>
           <ion-col col-3  text-center>
              <img alt="guindaille" src="./assets/img/g2.png" align="middle" (click)="changePage(guindaillePage)"/>
-             <p align="center"><b><font color="#002D62">{{'MENU.PARTY' | translate}}</font></b></p>
+             <p align="center"><b><font color="#002D62">{{'MENU.GUINDAILLE' | translate}}</font></b></p>
           </ion-col>
           <ion-col col-3  text-center >
              <img alt="urgence" src="./assets/img/urgence.png" align="middle"  (click)="emergency()"/>
