--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -46,11 +46,11 @@
         <!----------------------------------------------------------GRID FOR PORTRAIT------------------------------------------------------------------------------->
         <ion-row class="homeM">
           <ion-col col-4  text-center id="study">
-            <img alt="etudes" src="./assets/img/études.png" align="middle"   (click)="changePage(studiesPage)"/>
+            <img alt="etudes" src="./assets/img/studies.png" align="middle"   (click)="changePage(studiesPage)"/>
             <p align="center"><b><font color="#002D62" >{{'HOME.ETUDES' | translate}}</font></b></p>
           </ion-col>
           <ion-col col-4  text-center>
-            <img alt="biblio" src="./assets/img/biblio.png" align="middle"  (click)="changePage(libraryPage)"/> 
+            <img alt="biblio" src="./assets/img/libraries.png" align="middle"  (click)="changePage(libraryPage)"/> 
             <p align="center"><b><font color="#002D62">{{'HOME.LIBRARY' | translate}}</font></b></p>
           </ion-col>
           <ion-col col-4  text-center>
@@ -74,7 +74,7 @@
         </ion-row>
         <ion-row class="homeM">
           <ion-col col-4  text-center>
-            <img alt="carte" src="./assets/img/cartes.png" align="middle"  (click)="changePage(mapPage)"/>
+            <img alt="carte" src="./assets/img/map.png" align="middle"  (click)="changePage(mapPage)"/>
             <p align="center"><b><font color="#002D62">{{'HOME.MAP' | translate}}</font></b></p>
           </ion-col>
           <ion-col col-4  text-center>
@@ -82,17 +82,17 @@
             <p align="center"><b><font color="#002D62">{{'HOME.REST' | translate}}</font></b></p>
           </ion-col>
           <ion-col col-4 text-center>
-            <img alt="voiture" src="./assets/img/mobilité.png" align="middle"  (click)="changePage(mobilityPage)"/>
+            <img alt="voiture" src="./assets/img/mobility.png" align="middle"  (click)="changePage(mobilityPage)"/>
             <p align="center"><b><font color="#002D62">{{'HOME.MOBILITY' | translate}}</font></b></p>
           </ion-col>
         </ion-row >
         <ion-row class="homeM">
           <ion-col col-4  text-center>
-             <img alt="param" src="./assets/img/setting.png" align="middle"  (click)="changePage(paramPage)"/>
+             <img alt="param" src="./assets/img/settings.png" align="middle"  (click)="changePage(paramPage)"/>
              <p align="center"><b><font color="#002D62">{{'MENU.SETTINGS' | translate}}</font></b></p>
           </ion-col>
           <ion-col col-4  text-center>
-             <img alt="guindaille" src="./assets/img/g2.png" align="middle" (click)="changePage(guindaillePage)"/>
+             <img alt="guindaille" src="./assets/img/guindaille.png" align="middle" (click)="changePage(guindaillePage)"/>
              <p align="center"><b><font color="#002D62">{{'MENU.GUINDAILLE' | translate}}</font></b></p>
           </ion-col>
           <ion-col col-4  text-center >
@@ -104,11 +104,11 @@
   <!----------------------------------------------------------GRID FOR LANDSCAPE------------------------------------------------------------------------------->
         <ion-row class="homeML">
           <ion-col col-3  text-center id="study">
-            <img alt="etudes" src="./assets/img/études.png" align="middle"   (click)="changePage(studiesPage)"/>
+            <img alt="etudes" src="./assets/img/studies.png" align="middle"   (click)="changePage(studiesPage)"/>
             <p align="center"><b><font color="#002D62" >{{'HOME.ETUDES' | translate}}</font></b></p>
           </ion-col>
           <ion-col col-3  text-center>
-            <img alt="biblio" src="./assets/img/biblio.png" align="middle"  (click)="changePage(libraryPage)"/> 
+            <img alt="biblio" src="./assets/img/libraries.png" align="middle"  (click)="changePage(libraryPage)"/> 
             <p align="center"><b><font color="#002D62">{{'HOME.LIBRARY' | translate}}</font></b></p>
           </ion-col>
           <ion-col col-3  text-center>
@@ -130,7 +130,7 @@
             <p align="center"><b><font color="#002D62">{{'HOME.SPORTS' | translate}}</font></b></p>
           </ion-col>
           <ion-col col-3  text-center>
-            <img alt="carte" src="./assets/img/cartes.png" align="middle"  (click)="changePage(mapPage)"/>
+            <img alt="carte" src="./assets/img/map.png" align="middle"  (click)="changePage(mapPage)"/>
             <p align="center"><b><font color="#002D62">{{'HOME.MAP' | translate}}</font></b></p>
           </ion-col>
           <ion-col col-3  text-center>
@@ -140,15 +140,15 @@
         </ion-row>
         <ion-row class="homeML">
           <ion-col col-3 text-center>
-            <img alt="voiture" src="./assets/img/mobilité.png" align="middle"  (click)="changePage(mobilityPage)"/>
+            <img alt="voiture" src="./assets/img/mobility.png" align="middle"  (click)="changePage(mobilityPage)"/>
             <p align="center"><b><font color="#002D62">{{'HOME.MOBILITY' | translate}}</font></b></p>
           </ion-col>
           <ion-col col-3  text-center>
-             <img alt="param" src="./assets/img/setting.png" align="middle"  (click)="changePage(paramPage)"/>
+             <img alt="param" src="./assets/img/settings.png" align="middle"  (click)="changePage(paramPage)"/>
              <p align="center"><b><font color="#002D62">{{'MENU.SETTINGS' | translate}}</font></b></p>
           </ion-col>
           <ion-col col-3  text-center>
-             <img alt="guindaille" src="./assets/img/g2.png" align="middle" (click)="changePage(guindaillePage)"/>
+             <img alt="guindaille" src="./assets/img/guindaille.png" align="middle" (click)="changePage(guindaillePage)"/>
              <p align="center"><b><font color="#002D62">{{'MENU.GUINDAILLE' | translate}}</font></b></p>
           </ion-col>
           <ion-col col-3  text-center >
