--- a/src/app/pages/tuto/tuto.html
+++ b/src/app/pages/tuto/tuto.html
@@ -1,7 +1,7 @@
 <!--
     Copyright (c)  Université catholique Louvain.  All rights reserved
     Authors :  Benjamin Daubry & Bruno Marchesini
-    Date : July 2018
+    Date : 2018-2019
     This file is part of StudUCLouvain
     Licensed under the GPL 3.0 license. See LICENSE file in the project root for full license information.
 
